--- a/tutorial.css
+++ b/tutorial.css
@@ -1,86 +1,56 @@
-h1 {
-  font-family: "Comic Sans MS";
-  color: #af11d7;
-  text-align: left;
-  font-size: 40px;
-}
-
-h3 {
-  color: #af11d7;
-  font-family: "Comic Sans MS";
-}
-
-h4 {
-  color: #af11d7;
-  font-family: "Comic Sans MS";
-  text-align: right;
-}
-
-body {
-  background: #9de8ff;
-}
-
+/*----- Tabs -----*/
 .tabs {
-    width:100%;
-    display:inline-block;
+	width:100%;
+	display:inline-block;
 }
 
-    .tab-links:after {
-        display:block;
-        clear:both;
-        content:'';
-    }
-    
-    .tab-links li {
-        margin:0px 5px;
-        float: left;
-        list-style:none;
-        font-family: Arial;
-    }
-        .tab-links a {
-            padding:9px 15px;
-            display:inline-block;
-            border-radius:3px 3px 0px 0px;
-            background:#d65bff;
-            font-size:16px;
-            font-weight:600;
-            color:#4c4c4c;
-            transition:all linear 0.15s;
-        }
-        
-        .tab-links a:hover {
-            background:#a7cce5;
-            text-decoration:none;
-        }
+/*----- Tab Links -----*/
+/* Clearfix */
+	.tab-links:after {
+	display:block;
+	clear:both;
+	content:'';
+}
 
-    li.active a, li.active a:hover {
-        background:#fff;
-        color:#4c4c4c;
-    }
+.tab-links li {
+	margin:0px 5px;
+	float:left;
+	list-style:none;
+}
 
-    .tab-content {
-        padding:15px;
-        border-radius:3px;
-        box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
-        background:#fff;
-    }
-    
-        .tab {
-            display:none;
-        }
+.tab-links a {
+	padding:9px 15px;
+	display:inline-block;
+	border-radius:3px 3px 0px 0px;
+	background:#7FB5DA;
+	font-size:16px;
+	font-weight:600;
+	color:#4c4c4c;
+	transition:all linear 0.15s;
+}
 
-        .tab.active {
-            display:block;
-        }
-        
-  p {
-    font-family: Arial;
-  }
+.tab-links a:hover {
+	background:#a7cce5;
+	text-decoration:none;
+}
 
-  h2 {
-    font-family: Arial;
-  }
+li.active a, li.active a:hover {
+	background:#fff;
+	color:#4c4c4c;
+}
 
-  }
+/*----- Content of Tabs -----*/
+.tab-content {
+	padding:15px;
+	border-radius:3px;
+	box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
+	background:#fff;
+}
 
+.tab {
+	display:none;
+}
+
+.tab.active {
+	display:block;
 }
