--- a/tutorial.css
+++ b/tutorial.css
@@ -1,56 +1,35 @@
-/*----- Tabs -----*/
-.tabs {
-	width:100%;
-	display:inline-block;
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family: Arial;
 }
 
-/*----- Tab Links -----*/
-/* Clearfix */
-	.tab-links:after {
-	display:block;
-	clear:both;
-	content:'';
+/* Style tab links */
+.tablink {
+  background-color: #555;
+  color: white;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  font-size: 17px;
+  width: 25%;
 }
 
-.tab-links li {
-	margin:0px 5px;
-	float:left;
-	list-style:none;
+.tablink:hover {
+  background-color: #777;
 }
 
-.tab-links a {
-	padding:9px 15px;
-	display:inline-block;
-	border-radius:3px 3px 0px 0px;
-	background:#7FB5DA;
-	font-size:16px;
-	font-weight:600;
-	color:#4c4c4c;
-	transition:all linear 0.15s;
+/* Style the tab content (and add height:100% for full page content) */
+.tabcontent {
+  color: white;
+  display: none;
+  padding: 100px 20px;
+  height: 100%;
 }
 
-.tab-links a:hover {
-	background:#a7cce5;
-	text-decoration:none;
-}
-
-li.active a, li.active a:hover {
-	background:#fff;
-	color:#4c4c4c;
-}
-
-/*----- Content of Tabs -----*/
-.tab-content {
-	padding:15px;
-	border-radius:3px;
-	box-shadow:-1px 1px 1px rgba(0,0,0,0.15);
-	background:#fff;
-}
-
-.tab {
-	display:none;
-}
-
-.tab.active {
-	display:block;
-}
+#Home {background-color: red;}
+#News {background-color: green;}
+#Contact {background-color: blue;}
+#About {background-color: orange;}
