--- a/tutorial.css
+++ b/tutorial.css
@@ -1,97 +1,138 @@
-$white-rock: #EDECD5;
-$rum-swizzle: #FBF9E8;
-$buddha-gold: #C0970A;
-$citrus: #AAC706;
-$mountain-meadow: #15C68E;
-$blue-green: #14A3BB;
-$medium-slate-blue: #776EEF;
-
-$tabs-list: (
-  apples: $buddha-gold, 
-  bananas: $citrus, 
-  cherries: $mountain-meadow, 
-  oranges: $blue-green, 
-  pears: $medium-slate-blue
-);
-
-// General styles
 @import url(https://fonts.googleapis.com/css?family=Vollkorn);
-* { 
-  box-sizing: border-box;
+ * {
+	 box-sizing: border-box;
 }
-html {
-  height: 100%;
+ html {
+	 height: 100%;
 }
-body {
-  font-family: Vollkorn;
-  height: 100%;
-  padding: 2em;
-  line-height: 1.5;
-  max-width: 70em;
-  margin-left: auto;
-  margin-right: auto;
+ body {
+	 font-family: Vollkorn;
+	 height: 100%;
+	 padding: 2em;
+	 line-height: 1.5;
+	 max-width: 70em;
+	 margin-left: auto;
+	 margin-right: auto;
 }
-
-// Tab styling
-.tabs {
-  height: 100%;
+ .tabs {
+	 height: 100%;
 }
-input[name="tabs"] {
-  float: left;
-  opacity: 0;
-  position: absolute;
+ input[name="tabs"] {
+	 float: left;
+	 opacity: 0;
+	 position: absolute;
 }
-input[name="tabs"] ~ label {
-    padding: 1em;
-    width: 20%;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    transition:background .3s;
-    &:hover {
-      background:#d9d9d9;
-    }
-    &:focus {
-      outline: 0;
-      text-shadow: 1px 1px 3px #888;
-    }
+ input[name="tabs"] ~ label {
+	 padding: 1em;
+	 width: 20%;
+	 float: left;
+	 text-align: center;
+	 cursor: pointer;
+	 transition: background 0.3s;
 }
-.tab {
-    height: 100%;
-    display: none;
-    padding: 6em 2em 2em;
+ input[name="tabs"] ~ label:hover {
+	 background: #d9d9d9;
 }
-
-@each $current-tab, $colour in $tabs-list {
-    label[for="toggle-#{$current-tab}"] {
-        border-top: 8px solid #{$colour};
-        background: $rum-swizzle;
-        border-left: 1px solid darken($white-rock, 20%);
-        text-transform: uppercase;
-    }
-    #toggle-#{$current-tab}:checked ~ .tab-#{$current-tab} { 
-        display:block;
-        background: $white-rock;
-    }
-    #toggle-#{$current-tab}:checked ~ label[for="toggle-#{$current-tab}"] {
-        cursor: default;
-        background: $white-rock;
-        color: #{$colour};
-    }
+ input[name="tabs"] ~ label:focus {
+	 outline: 0;
+	 text-shadow: 1px 1px 3px #888;
 }
-svg {
-  height: 2rem;
-  width: 2rem;
-  display: inline-block;
-  vertical-align: middle;
+ .tab {
+	 height: 100%;
+	 display: none;
+	 padding: 6em 2em 2em;
 }
-.text-title {
-  display: none;
-  @media screen and (min-width: 900px) {
-    display: inline-block;
-    vertical-align: middle;
-  }
+ label[for="toggle-apples"] {
+	 border-top: 8px solid #c0970a;
+	 background: #fbf9e8;
+	 border-left: 1px solid #cecc8e;
+	 text-transform: uppercase;
 }
-.kaomoji {
-  white-space: nowrap;
+ #toggle-apples:checked ~ .tab-apples {
+	 display: block;
+	 background: #edecd5;
 }
+ #toggle-apples:checked ~ label[for="toggle-apples"] {
+	 cursor: default;
+	 background: #edecd5;
+	 color: #c0970a;
+}
+ label[for="toggle-bananas"] {
+	 border-top: 8px solid #aac706;
+	 background: #fbf9e8;
+	 border-left: 1px solid #cecc8e;
+	 text-transform: uppercase;
+}
+ #toggle-bananas:checked ~ .tab-bananas {
+	 display: block;
+	 background: #edecd5;
+}
+ #toggle-bananas:checked ~ label[for="toggle-bananas"] {
+	 cursor: default;
+	 background: #edecd5;
+	 color: #aac706;
+}
+ label[for="toggle-cherries"] {
+	 border-top: 8px solid #15c68e;
+	 background: #fbf9e8;
+	 border-left: 1px solid #cecc8e;
+	 text-transform: uppercase;
+}
+ #toggle-cherries:checked ~ .tab-cherries {
+	 display: block;
+	 background: #edecd5;
+}
+ #toggle-cherries:checked ~ label[for="toggle-cherries"] {
+	 cursor: default;
+	 background: #edecd5;
+	 color: #15c68e;
+}
+ label[for="toggle-oranges"] {
+	 border-top: 8px solid #14a3bb;
+	 background: #fbf9e8;
+	 border-left: 1px solid #cecc8e;
+	 text-transform: uppercase;
+}
+ #toggle-oranges:checked ~ .tab-oranges {
+	 display: block;
+	 background: #edecd5;
+}
+ #toggle-oranges:checked ~ label[for="toggle-oranges"] {
+	 cursor: default;
+	 background: #edecd5;
+	 color: #14a3bb;
+}
+ label[for="toggle-pears"] {
+	 border-top: 8px solid #776eef;
+	 background: #fbf9e8;
+	 border-left: 1px solid #cecc8e;
+	 text-transform: uppercase;
+}
+ #toggle-pears:checked ~ .tab-pears {
+	 display: block;
+	 background: #edecd5;
+}
+ #toggle-pears:checked ~ label[for="toggle-pears"] {
+	 cursor: default;
+	 background: #edecd5;
+	 color: #776eef;
+}
+ svg {
+	 height: 2rem;
+	 width: 2rem;
+	 display: inline-block;
+	 vertical-align: middle;
+}
+ .text-title {
+	 display: none;
+}
+ @media screen and (min-width: 900px) {
+	 .text-title {
+		 display: inline-block;
+		 vertical-align: middle;
+	}
+}
+ .kaomoji {
+	 white-space: nowrap;
+}
+ 
