--- a/tutorial.css
+++ b/tutorial.css
@@ -15,8 +15,8 @@
 	 padding: 2em;
 	 line-height: 1.5;
 	 max-width: 70em;
-	 margin-left: 0;
-	 margin-right: 0;
+	 margin-left: 0 auto;
+	 margin-right: 0 auto;
 }
  .tabs {
 	 height: 100%;
