--- a/tutorial.css
+++ b/tutorial.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Vollkorn);
- * {
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:500&display=swap');
+* {
 	 box-sizing: border-box;
 }
  html {
