--- a/tutorial.css
+++ b/tutorial.css
@@ -6,11 +6,11 @@
 	 height: 100%;
 }
  head {
-	font-family: Vollkorn;
+	font-family: 'Cormorant Infant', serif;
 }
 	
  body {
-	 font-family: Vollkorn;
+	 font-family: 'Cormorant Infant', serif;
 	 height: 100%;
 	 padding: 2em;
 	 line-height: 1.5;
