--- a/tutorial.css
+++ b/tutorial.css
@@ -52,7 +52,7 @@
 	 padding: 1rem;
 }
  .tabs > div:nth-of-type(1) {
-	 background: #9b59b6;
+	 background: #fcb68b;
 }
  .tabs > div:nth-of-type(2) {
 	 background: #3498db;
@@ -66,6 +66,28 @@
  .tabs > .active {
 	 display: block;
 }
+li {
+	 display: inline-block;
+	 padding: 0;
+	 vertical-align: bottom;
+}
+ li:nth-child(1) .active {
+	 color: #fcb68b;
+	 border-bottom-color: #9b59b6;
+}
+ li:nth-child(2) .active {
+	 color: #8bc4ea;
+	 border-bottom-color: #3498db;
+}
+ li:nth-child(3) .active {
+	 color: #f0b37e;
+	 border-bottom-color: #e67e22;
+}
+ li:nth-child(4) .active {
+	 color: #df7c72;
+	 border-bottom-color: #c0392b;
+}
+ 
  
 body {
   background: #333;
