--- a/tutorial.css
+++ b/tutorial.css
@@ -14,6 +14,15 @@
   font-weight: bold;
   transition: background ease 0.2s;
 }
+.tabs label > div:nth-of-type(1) {
+	background: #fcb68b
+}
+.tabs label > div:nth-of-type(2) {
+	background: #fcb68b
+}
+.tabs label > div:nth-of-type(3) {
+	background: #fcb68b
+}
  
 .tabs .tab {
   order: 99;
@@ -66,35 +75,13 @@
  .tabs > .active {
 	 display: block;
 }
-li {
-	 display: inline-block;
-	 padding: 0;
-	 vertical-align: bottom;
-}
- li:nth-child(1) .active {
-	 color: #fcb68b;
-	 border-bottom-color: #9b59b6;
-}
- li:nth-child(2) .active {
-	 color: #8bc4ea;
-	 border-bottom-color: #3498db;
-}
- li:nth-child(3) .active {
-	 color: #f0b37e;
-	 border-bottom-color: #e67e22;
-}
- li:nth-child(4) .active {
-	 color: #df7c72;
-	 border-bottom-color: #c0392b;
-}
- 
  
 body {
   background: #333;
   min-height: 100vh;
   box-sizing: border-box;
   padding-top: 10vh;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  font-family: 'Cormorant Infant', serif;
   font-weight: 300;
   line-height: 1.5;
   max-width: 60rem;
