--- a/tutorial.css
+++ b/tutorial.css
@@ -13,10 +13,8 @@
   font-weight: bold;
   transition: background ease 0.2s;
 }
-.tabs li a:nth-child(1) {background-color:#fcb68b;} 
-.tabs li a:nth-child(2) {background-color:#fcb68b;} 
-.tabs li a:nth-child(3) {background-color:#fcb68b;}        
-.tabs li a:nth-child(4) {background-color:#336699;}
+.tabs label a.tabone {background-color:#fcb68b;}
+.tabs li a.tabtwo {background-color:#fcb68b;}
  
 .tabs .tab {
   order: 99;
