--- a/tutorial.css
+++ b/tutorial.css
@@ -1,85 +1,56 @@
-@import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:500&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:500|Roboto+Slab&display=swap');
 .tabs {
   display: flex;
   flex-wrap: wrap;
 }
- 
+
 .tabs label {
   order: 1;
   display: block;
   padding: 1rem 2rem;
   margin-right: 0.2rem;
   cursor: pointer;
+  background:  #3CC0F8;
   font-weight: bold;
   transition: background ease 0.2s;
 }
 
- 
 .tabs .tab {
   order: 99;
   flex-grow: 1;
   width: 100%;
   display: none;
   padding: 1rem;
+  background: #fff;
 }
- 
+
 .tabs input[type="radio"] {
   display: none;
 }
- 
-/*.tabs input[type="radio"]:checked + label {
-  background: #ffffff;
-}*/
 
-input[type="radio"]:nth-of-type(1) {
-	 background: #f06868;
+.tabs input[type="radio"]:checked + label {
+  background: #fff;
 }
- input[type="radio"]:nth-of-type(2) {
-	 outline-color: #fab57a;
-}
- input[type="radio"]:nth-of-type(3) {
-	 outline-color: #edf798;
-}
- input[type="radio"]:nth-of-type(4) {
-	 outline-color: #80d6ff;
-}
- 
+
 .tabs input[type="radio"]:checked + label + .tab {
   display: block;
 }
- 
+
 @media (max-width: 45em) {
   .tabs .tab,
   .tabs label {
     order: initial;
   }
- 
+
   .tabs label {
     width: 100%;
     margin-right: 0;
     margin-top: 0.2rem;
   }
 }
-.tabs > div {
-	 display: none;
-	 padding: 1rem;
+h1 {
+	font-family: 'Roboto Slab', serif;
 }
- .tabs > div:nth-of-type(1) {
-	 background: #fcb68b;
-}
- .tabs > div:nth-of-type(2) {
-	 background: #3498db;
-}
- .tabs > div:nth-of-type(3) {
-	 background: #e67e22;
-}
- .tabs > div:nth-of-type(4) {
-	 background: #c0392b;
-}
- .tabs > .active {
-	 display: block;
-}
- 
 body {
   background: #333;
   min-height: 100vh;
@@ -88,7 +59,7 @@ body {
   font-family: 'Cormorant Infant', serif;
   font-weight: 300;
   line-height: 1.5;
-
+  max-width: 60rem;
   margin: 0 auto;
   font-size: 112%;
 }
