--- a/tutorial.css
+++ b/tutorial.css
@@ -52,7 +52,7 @@ h1 {
 	font-family: 'Roboto Slab', serif;
 }
 body {
-  background: #FEFFC6;
+  background: #b0deff;
   min-height: 100vh;
   box-sizing: border-box;
   padding-top: 10vh;
