--- a/tutorial.css
+++ b/tutorial.css
@@ -10,7 +10,7 @@
   padding: 1rem 2rem;
   margin-right: 0.2rem;
   cursor: pointer;
-  background:  #3CC0F8;
+  background:  #ffb8eb;
   font-weight: bold;
   transition: background ease 0.2s;
 }
