--- a/tutorial.css
+++ b/tutorial.css
@@ -75,6 +75,8 @@ a:visited {
 head {
 	padding: 3rem;
 	padding-top: 100vh;
+	display:inline-block; 
+	margin-right:1000px;
 }
 body {
   background: #edc7b7;
