--- a/tutorial.css
+++ b/tutorial.css
@@ -68,8 +68,8 @@ h3 {
 	width:90%;
 	min-width:800px;
 	margin-bottom:20px;
-	margin-left:1rem;
-	margin-right:auto;
+	margin-left:10px;
+	margin-right:10px;
 }
 .lefttext {
 	float: left;
