--- a/tutorial.css
+++ b/tutorial.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:500|Roboto+Slab&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Raleway|Stardos+Stencil&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300|Ribeye&display=swap');
 .tabs {
   display: flex;
   flex-wrap: wrap;
@@ -52,20 +52,20 @@
 }
 h1 {
 	padding: 1rem;
-	font-family: 'Stardos Stencil', cursive;
+	font-family: 'Ribeye', cursive;
 	color: #ac3b61;
 	margin-right: 200px;
 }
 h2 {
-	font-family: 'Stardos Stencil', cursive;
+	font-family: 'Ribeye', cursive;
 	color: #ac3b61;
 }
 h3 {
-	font-family: 'Stardos Stencil', cursive;
+	font-family: 'Ribeye', cursive;
 	color: #eb88c5;
 }
 h4 {
-	font-family: 'Stardos Stencil', cursive;
+	font-family: 'Ribeye', cursive;
 	color: #eb88c5;
 }
 #container {
